examples/test/testpolicy15822.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15822
  namespace: namespace459
spec:
  podSelector:
    matchLabels:
      key34: value9
      key25: value35
      key27: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value24
          key41: value5
          key23: value31
      podSelector:
        matchLabels:
          key24: value1
          key28: value14
